<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fumoku</string>

    <!-- User Interfaces -->
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="story">Story</string>
    <string name="fumo_bad">ᗜ˰ᗜ</string>
    <string name="fumo_good">ᗜˬᗜ</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">You\'re signed in!</string>
    <string name="not_signed_in">You\'re not signed in!</string>

    <string name="add_item">Add Item</string>

    <!-- Placeholders -->
    <string name="title">Title</string>
    <string name="secondary_text">Secondary text</string>
    <string name="supporting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="content_description_media">Media</string>

    <!-- AboutLibraries -->
    <string name="aboutLibraries_description_text">Fumoku is a free and open source software for Android to keep track of your personal dolls.</string>
</resources>